[gd_scene load_steps=21 format=3 uid="uid://cb84eu6hvtw56"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_3aujx"]
[ext_resource type="Texture2D" uid="uid://bawch2x5leakq" path="res://icon.svg" id="1_riasp"]
[ext_resource type="Script" path="res://Scripts/Attacks/attack.gd" id="3_ga6wc"]
[ext_resource type="Script" path="res://Scripts/Attacks/attack_resource.gd" id="4_olwd7"]
[ext_resource type="Script" path="res://Scripts/Attacks/Indicators/pointing_indicator.gd" id="6_ix8pv"]
[ext_resource type="Script" path="res://Scripts/StateMachine/state_machine.gd" id="6_wb2ro"]
[ext_resource type="Script" path="res://Scripts/StateMachine/idle.gd" id="7_1kgd0"]
[ext_resource type="Texture2D" uid="uid://cah7h8lupvf8r" path="res://Textures/IndicatorTexture.tres" id="7_p8elm"]
[ext_resource type="Script" path="res://Scripts/StateMachine/running.gd" id="8_487jh"]
[ext_resource type="Script" path="res://Scripts/StateMachine/dashing.gd" id="9_i76bh"]
[ext_resource type="Script" path="res://Scripts/StateMachine/casting.gd" id="10_tulnk"]
[ext_resource type="Script" path="res://Scripts/StateMachine/targeting.gd" id="11_lro6b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lo713"]
size = Vector2(38, 38)

[sub_resource type="Resource" id="Resource_78ck7"]
script = ExtResource("4_olwd7")
base_value = 1.0
multiplier = 1.0
travel_speed = 400.0
width = 10.0
height = 20.0
amount = 1
attack_width = 100.0
attack_range = 750.0
has_range = false
duration = 5.0
has_duration = true
cooldown = 0.02
charges = -1
cast_time = 0.0
can_move_while_casting = false
element = 0
type = 1
delivery = 1
shape = 2
movement_type = 2
buff = Array[int]([])
debuff = Array[int]([])
buff_duration = Array[float]([])
debuff_duration = Array[float]([])
bounce = false
max_bounce_distance = 1.0
max_bounces = 1
bounce_damage = 0.3
pierce = false
pierce_damage = 0.3
homing = false
impact = 0

[sub_resource type="Resource" id="Resource_yr4si"]
script = ExtResource("4_olwd7")
base_value = 1.0
multiplier = 1.0
travel_speed = 1.0
width = 1.0
height = 1.0
amount = 1
attack_width = 1.0
attack_range = 1.0
has_range = false
duration = 5.0
has_duration = false
cooldown = 1.0
charges = 1
cast_time = 0.0
can_move_while_casting = false
element = 0
type = 0
delivery = 0
shape = 0
movement_type = 0
buff = Array[int]([])
debuff = Array[int]([])
buff_duration = Array[float]([])
debuff_duration = Array[float]([])
bounce = false
max_bounce_distance = 1.0
max_bounces = 1
bounce_damage = 0.3
pierce = false
pierce_damage = 0.3
homing = false
impact = 0

[sub_resource type="Resource" id="Resource_26ayo"]
script = ExtResource("6_ix8pv")
texture = ExtResource("7_p8elm")

[sub_resource type="Resource" id="Resource_1gknm"]
script = ExtResource("4_olwd7")
base_value = 1.0
multiplier = 1.0
travel_speed = 100.0
width = 30.0
height = 0.0
amount = 3
attack_width = 1.0
attack_range = 300.0
has_range = false
duration = 5.0
has_duration = false
cooldown = 1.0
charges = 1
cast_time = 0.1
can_move_while_casting = true
element = 1
type = 1
delivery = 5
shape = 5
indicator = SubResource("Resource_26ayo")
movement_type = 1
buff = Array[int]([])
debuff = Array[int]([])
buff_duration = Array[float]([])
debuff_duration = Array[float]([])
bounce = false
max_bounce_distance = 1.0
max_bounces = 1
bounce_damage = 0.3
pierce = false
pierce_damage = 0.3
homing = false
impact = 0

[sub_resource type="Resource" id="Resource_t0f4s"]
script = ExtResource("6_ix8pv")

[sub_resource type="Resource" id="Resource_ltnip"]
script = ExtResource("4_olwd7")
base_value = 1.0
multiplier = 1.0
travel_speed = 150.0
width = 100.0
height = 250.0
amount = 1
attack_width = 100.0
attack_range = 250.0
has_range = false
duration = 5.0
has_duration = false
cooldown = 1.0
charges = 1
cast_time = 0.1
can_move_while_casting = false
element = 1
type = 1
delivery = 5
shape = 5
indicator = SubResource("Resource_t0f4s")
movement_type = 1
buff = Array[int]([])
debuff = Array[int]([])
buff_duration = Array[float]([])
debuff_duration = Array[float]([])
bounce = false
max_bounce_distance = 1.0
max_bounces = 1
bounce_damage = 0.3
pierce = false
pierce_damage = 0.3
homing = false
impact = 0

[sub_resource type="Resource" id="Resource_umxlb"]
script = ExtResource("4_olwd7")
base_value = 1500.0
multiplier = 1.0
travel_speed = 1.0
width = 1.0
height = 1.0
amount = 1
attack_width = 1.0
attack_range = 1.0
has_range = false
duration = 0.2
has_duration = false
cooldown = 1.0
charges = 1
cast_time = 0.0
can_move_while_casting = false
element = 0
type = 2
delivery = 2
shape = 0
movement_type = 0
buff = Array[int]([])
debuff = Array[int]([])
buff_duration = Array[float]([])
debuff_duration = Array[float]([])
bounce = false
max_bounce_distance = 1.0
max_bounces = 1
bounce_damage = 0.3
pierce = false
pierce_damage = 0.3
homing = false
impact = 0

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_3aujx")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.19209e-06, 1.19209e-06)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_riasp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lo713")

[node name="Attack1" type="Node2D" parent="."]
script = ExtResource("3_ga6wc")
ar = SubResource("Resource_78ck7")

[node name="Cooldown_a1" type="Timer" parent="Attack1"]

[node name="Attack2" type="Node2D" parent="."]
script = ExtResource("3_ga6wc")
ar = SubResource("Resource_yr4si")

[node name="Cooldown_a2" type="Timer" parent="Attack2"]

[node name="Spell1" type="Node2D" parent="."]
script = ExtResource("3_ga6wc")
ar = SubResource("Resource_1gknm")

[node name="Cooldown_s1" type="Timer" parent="Spell1"]

[node name="Spell2" type="Node2D" parent="."]
script = ExtResource("3_ga6wc")
ar = SubResource("Resource_ltnip")

[node name="Cooldown_s2" type="Timer" parent="Spell2"]

[node name="Dodge" type="Node2D" parent="."]
script = ExtResource("3_ga6wc")
ar = SubResource("Resource_umxlb")

[node name="Cooldown_d1" type="Timer" parent="Dodge"]

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_wb2ro")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State Machine"]
script = ExtResource("7_1kgd0")

[node name="Running" type="Node" parent="State Machine"]
script = ExtResource("8_487jh")

[node name="Dashing" type="Node" parent="State Machine"]
script = ExtResource("9_i76bh")

[node name="Casting" type="Node" parent="State Machine"]
script = ExtResource("10_tulnk")

[node name="Targeting" type="Node" parent="State Machine"]
script = ExtResource("11_lro6b")

[node name="Hurt" type="Node" parent="State Machine"]

[node name="Dead" type="Node" parent="State Machine"]

[node name="Root" type="Node" parent="State Machine"]

[node name="Stunned" type="Node" parent="State Machine"]

[node name="Silenced" type="Node" parent="State Machine"]

[connection signal="timeout" from="Attack1/Cooldown_a1" to="." method="_on_cooldown_a_1_timeout"]
[connection signal="timeout" from="Attack2/Cooldown_a2" to="." method="_on_cooldown_a_2_timeout"]
[connection signal="timeout" from="Spell1/Cooldown_s1" to="." method="_on_cooldown_s_1_timeout"]
[connection signal="timeout" from="Spell2/Cooldown_s2" to="." method="_on_cooldown_s_2_timeout"]
[connection signal="timeout" from="Dodge/Cooldown_d1" to="." method="_on_cooldown_d_1_timeout"]
